# TransformerExampleInC--

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/Common/: Embedding.h  FeedForwardNetwork.h  FinalLayer.h  LayerNorm.h  SelfAttention.h  Tokenizer.h  VectorMath.h  utils.h
include/Decoding/: Decoder.h  DecoderLayer.h
include/Encoding/: Encoder.h  EncoderLayer.h  PositionalEncoding.h
src/Common/: Embedding.cpp  FeedForwardNetwork.cpp  FinalLayer.cpp  LayerNorm.cpp  SelfAttention.cpp  Tokenizer.cpp  VectorMath.cpp
src/Decoding/: Decoder.cpp  DecoderLayer.cpp
src/Encoding/: Encoder.cpp  EncoderLayer.cpp  PositionalEncoding.cpp
